--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "A FoundryVTT module for generating NPCs with existential depth and meaning.",
   "main": "scripts/main.js",
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
-    "clean": "rimraf scripts/*.js scripts/*.js.map"
+    "build": "vite build",
+    "dev": "vite build --watch",
+    "clean": "rimraf scripts/*"
   },
   "devDependencies": {
-    "@league-of-foundry-developers/foundry-vtt-types": "^11.315.0",
+    "@league-of-foundry-developers/foundry-vtt-types": "^12.331.0",
     "@types/node": "^20.0.0",
     "rimraf": "^5.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vite": "^7.1.7",
+    "vite-plugin-dts": "^4.5.4"
   },
   "keywords": [
     "foundry-vtt",
